Remove bootstrap columns and rows from figure editor...[4 failing specs] they were causing strange layout problems add A1B2 labels to parameter editor bits. There are problematic shading issues, but by god I've got to commit.

--- a/app/assets/stylesheets/dances.scss
+++ b/app/assets/stylesheets/dances.scss
@@ -6,7 +6,6 @@
   font-family: 'Satisfy', cursive;
   font-size: 1.3em;
   text-decoration: none;
-  padding-left: 0.4em;
   color: black;
   &:hover, &:focus {
     text-decoration: none;
@@ -40,6 +39,11 @@
   label {
     font-weight: normal;
   }
+}
+
+.label-for-beats {
+  display: inline-block;
+  min-width: 1.3em;
 }
 
 // below here predates new figure editor-dm 10-01-2016
